--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "cli-color": "*",
         "dateformat": "*",
         "base58-native": "*",
-        "multi-hashing": "git://github.com/fancoder/node-multi-hashing.git",
-        "cryptonote-util": "git://github.com/forknote/node-cryptonote-util.git"
+        "cryptonote-util": "https://github.com/cbunting99/cryptonote-util.git",
+        "multi-hashing": "https://github.com/cbunting99/multi-hashing.git",
     },
     "engines": {
         "node": ">=0.10"
